--- a/d3_first_test.html
+++ b/d3_first_test.html
@@ -11,10 +11,6 @@
 <!-- The script block needs to be in the html file after the div tag is already defined!! -->
 <script>
 
-    function unique(x) {
-        return x.reverse().filter(function (e, i, x) {return x.indexOf(e, i+1) === -1;}).reverse();
-    }
-
     var margin  = {top: 20, right: 20, bottom: 100, left: 60},
         width   = 1500 - margin.left - margin.right,
         height  = 700 - margin.top - margin.bottom;
@@ -31,13 +27,15 @@
 //    d3.json("data/country_migration_public.json", function (data)
     csv_data = d3.csv("data/country_migration_public.csv");
 
-
-    // the .then function is only called when the .csv is loaded completely
+    // the .then function is only called once, after the .csv is loaded completely
     csv_data.then(function (csv_data) {
         var data = d3.nest()
             .key(function (d) { return d.base_country_name; })
             .rollup(function(ids) { return ids.length; })
             .entries(csv_data);
+
+        // sort the countries by decreasing number of targets
+        data = data.sort(function(a, b) { return b.value - a.value; })
 
         // data is an array containing dictionaries: { key: "United Arab Emirates", value: 93 }
         console.log(data)
@@ -45,7 +43,7 @@
         // X axis for the 'key' values (all countries)
         var x = d3.scaleBand()
                   .range([ 0, width ])
-                  .domain(unique(data.map(function(d) { return d.key; })))
+                  .domain(data.map(function(d) { return d.key; }))
                   .padding(0.5);
         svg.append("g")
             .attr("class", "x axis")
