--- a/Migration_flows_vega/vega2.html
+++ b/Migration_flows_vega/vega2.html
@@ -117,8 +117,9 @@ https://vega.github.io/editor/#/edited
   "range": [-100, 300]
 },
     {
-"name": "color",
+    "name": "color",
     "type": "ordinal",
+    "domain": ["Pos", "Neg"],
     "range": ["#0A2F51", "#9F2005"]
   }
 ],
