index.html: add fourth slide.

--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
 <!-- Body Inner -->
 <div class="body-inner">
     <!-- Header -->
-    <header class="header-always-fixed" id="header">
+    <header  id="header"></header>
+<!--    <header class="header-always-fixed" id="header">
         <div class="header-inner">
             <div class="container">
 
             </div>
         </div>
-    </header>
+    </header> -->
     <!-- end: Header -->
 
     <!-- WELCOME -->
-    <section class="background-grey p-b-0" id="welcome">
+    <section class="background-grey no-margin no-padding fullscreen" id="welcome">
         <div class="container">
             <div class="heading-text heading-section  text-center">
                 <h2 class="text-medium-light">Data Visualisation Project - KU Leuven<br/>
@@ -42,7 +43,7 @@
                 <span class="lead">introduction text</span>
             </div>
             <div class="row">
-                <div class="col-lg-4" data-animate="fadeInUp" data-animate-delay="0">
+                <div class="col-lg-4" data-animate="fadeInUp" data-animate-dela y="0">
                     <div class="icon-box effect medium border medium">
                         <div class="icon">
                             <a href="#"><i class="fa fa-user-plus"></i></a>
@@ -76,8 +77,7 @@
 
 
      <!-- Inspiro Slider -->
-    <section class="p-b-0" id="whatcanwedo">
-        <div class="inspiro-slider arrows-large dots-creative" id="slider">
+        <div class="inspiro-slider slider-fullscreen dots-creative arrows-large dots-creative" id="whatcanwedo">
 
             <!-- Slide 1_intro -->
             <div class="slide background-overlay-grey">
@@ -95,7 +95,7 @@
             <!-- Slide 1 -->
             <div class="slide background-overlay-light">
                 <div class="container">
-                    <iframe src="Bubble_development/roslingN3.html" title="" style="width:100%; height:800px;overflow:auto;"></iframe>
+                    <iframe src="rankingplot/rankingplot.html" title="" style="width:100%; height:800px;overflow:auto;"></iframe>
                 </div>
             </div>
             <!-- end: Slide 1 -->
@@ -141,10 +141,28 @@
                 </div>
             </div>
             <!-- end: Slide 3 -->
+            <!-- Slide 4_intro -->
+            <div class="slide background-overlay-grey">
+                <div class="container">
+                    <div class="slide-captions text-center text-light">
+                        <!-- Captions -->
+                        <h2>Title for the fourth chart</h2>
+                        <p class="text-small">Description of the fourth visualization. Scroll to the right -></p>
+                        <!-- end: Captions -->
+                    </div>
+                </div>
+            </div>
+            <!-- end: Slide 4_intro -->
 
+            <!-- Slide 4 -->
+            <div class="slide background-overlay-light">
+                <div class="container">
+                    <iframe src="Bubble_development/roslingN3.html" title="" style="width:100%; height:800px;overflow:auto;"></iframe>
+                </div>
+            </div>
+            <!-- end: Slide 4 -->
         </div>
         <!--end: Inspiro Slider -->
-    </section>
 
     <section  class="p-b-0" id="separator">
         <div class="container">
