--- a/Rosling_itteration3/rosling3.html
+++ b/Rosling_itteration3/rosling3.html
@@ -501,7 +501,7 @@
                     circle.append("svg:title")
                         .text(function(d) {
                             //alert(d.Country);
-                            return "Country: " + d.Country + "  Popuation: " + d.Population;
+                            return "Country: " + d.Country + "  Population: " + d.Population;
                         });
                     // Append lines to bubbles that will be used to show the precise data markings.
                     // Translate their location based on margins
